--- a/templates/download.html
+++ b/templates/download.html
@@ -76,7 +76,7 @@
                     📥 Baixar Contrato
                 </a>
                 <a href="{{ url_for('index') }}" class="btn btn-secondary">
-                    ← Voltar ao Dashboard
+                    ← Voltar ao Início
                 </a>
             </div>
         </div>
