--- a/templates/form.html
+++ b/templates/form.html
@@ -164,6 +164,11 @@
                 <button type="submit" class="btn btn-primary btn-lg" id="generateBtn">
                     <span class="btn-text">📄 Gerar Contrato DOCX</span>
                 </button>
+                <div style="margin-top: 16px;">
+                    <a href="{{ url_for('index') }}" class="btn btn-secondary">
+                        ← Voltar ao Início
+                    </a>
+                </div>
                 <div id="progressContainer" class="progress-bar-container"
                     style="display: none; max-width: 300px; margin: 16px auto 0;">
                     <div class="progress-bar progress-bar-indeterminate"></div>
